# temporal_game

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: app.py
app/assets/: sample_data.json
app/scripts/: sample_data.py
app/templates/: completed.html  login.html  questions.html
configs/: classifier.yaml
configs/accelerate/: zero2.yaml
configs/classifier/: bert.yaml  llama.yaml  llama_1b.yaml  llama_3b_balanced.yaml  llama_balanced.yaml  smol.yaml  smol_augmented.yaml  smol_balanced.yaml  smol_balanced_augmented.yaml
data/tempeval_3/: README.md
docs/: logbook.md
notebooks/: classifiers.ipynb  eda.ipynb  models.ipynb
results/: before.json
results/agents/: before.json  mcts.json  mcts_100.json  mcts_200.json  mcts_500.json  random.json  results.json
results/classifier/: classifier_bert.json  classifier_llama_1b.json
results/q_timelines/: classifier_llama_1b.json  classifier_llama_1b_balanced.json  classifier_smoll_135m_20241113151941.json  classifier_smoll_135m_b.json  classifier_smoll_135m_b_20241113152343.json  classifier_smoll_135m_b_a_20241113152527.json
results/timeset/: classifier_smoll_135m.json  classifier_smoll_135m_20241113151941.json  classifier_smoll_135m_b.json
scripts/: baseline.py  check_data.py  eval.py  results.py  run.sh  test.py  train.py  train_hf.py
scripts/agents/: print_results.py  run.sh  test.py
scripts/classifier/: dev.sh  eval.py  run.sh  train.py
scripts/data/: generate.py
scripts/model/: eval.py  run.sh  train.py
scripts/utils/: push_q_timelines.py
src/: agents.py  base.py  closure.py  constants.py  env.py  evaluation.py  mcts.py  prompts.py  timeline.py  utils.py
src/agents/: __init__.py  base.py  before.py  lm.py  mcts.py  random.py  trained.py
src/data/: __init__.py  levels.py  q_timelines.py  small_timelines.py  temporal_questions.py  timeset.py  utils.py
src/model/: __init__.py  classifier.py  gemini.py
src/trainer/: __init__.py  sft.py
tests/: test_agents.py  test_base.py  test_closure.py  test_envs.py  test_evaluation.py  test_mcts.py  test_timeline.py
tests/test_data/: test_data_loader.py  test_levels.py  test_qtimelines.py  test_timeset.py  (+1 more)
(+300 files in other folders)
